# Microservitude

./: .coverage  .gitignore  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
benchmarks/: calculator_latency.py
cost_estimator/: __init__.py
cost_estimator/adapters/: pg_repo.py  redis_cache.py  rq_queue.py
cost_estimator/api/: __init__.py  main.py
cost_estimator/cli/: db.py
cost_estimator/core/: __init__.py  calculators.py  models.py  ports.py
cost_estimator/worker/: worker.py
db/: alembic.ini  seeds.sql
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 20251005_0001_init.py  20260117_0002_constraints.py
tests/: conftest.py  test_api.py  test_api_main_helpers.py  test_calculators.py  test_cli_db.py  test_redis_cache.py  test_worker.py
tests/integration/: conftest.py  test_adapters_pg_repo.py  test_api_errors_and_health.py  test_api_estimate_happy_path.py  test_cache_and_adv_endpoint.py  test_cache_behavior_only.py  test_db_and_models.py  test_worker_direct_roundtrip.py
