[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-estimator"
version = "0.1.0"
description = "Execution cost estimator core domain logic."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cost Estimator Team" }]
dependencies = [
  "pydantic>=2.5,<3",
  "psycopg[binary]>=3.1,<4",
]

[project.urls]
Homepage = "https://github.com/your-org/cost-estimator"
Repository = "https://github.com/your-org/cost-estimator"
Issues = "https://github.com/your-org/cost-estimator/issues"
Documentation = "https://your-org.github.io/cost-estimator"

[project.optional-dependencies]
# API surface
api = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "redis>=5,<6",
  "pydantic-settings>=2.2,<3",
]

# Worker and queue
worker = [
  "rq>=1.16,<2",
  "redis>=5,<6",
]

# Database and migrations
db = [
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "psycopg[binary,pool]>=3.1,<4",
]

# Test and integration deps (httpx client + lifespan + containers)
test = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
  "asgi-lifespan>=2,<3",
  "testcontainers[postgres,redis]>=4,<5",
  "redis>=5,<6",
  "rq>=1.16,<2",
  "psycopg[binary]>=3.1,<4"
]

# Dev tooling
dev = [
  "black>=24.3,<25",
  "ruff>=0.5,<1",
  "mypy>=1.8,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
  "asgi-lifespan>=2,<3",
]

[project.scripts]
ce-db-up = "cost_estimator.cli.db:upgrade_head"
ce-db-seed = "cost_estimator.cli.db:seed"
ce-db-reset = "cost_estimator.cli.db:reset"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:.*httpx.*use `pytest.mark.anyio`.*:DeprecationWarning",
  "ignore:.*distutils.*:DeprecationWarning",
]

# Default DB paths and URLs used by ce-db-* scripts.
[tool.cost_estimator.db]
database_url = "postgresql+psycopg://postgres:postgres@localhost:5432/costdb"
alembic_ini = "db/alembic.ini"
script_location = "db/migrations"
seeds_file = "db/seeds.sql"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cost_estimator*"]
exclude = ["tests*", "infra*"]

[tool.setuptools.data-files]
"share/cost_estimator/db" = ["db/alembic.ini", "db/seeds.sql"]
"share/cost_estimator/db/migrations" = ["db/migrations/env.py", "db/migrations/script.py.mako"]
"share/cost_estimator/db/migrations/versions" = ["db/migrations/versions/*.py"]
